fix letter spacing

--- a/css/new-age-about.css
+++ b/css/new-age-about.css
@@ -36,15 +36,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
+  font-family: 'Catamaran', 'Lato', sans-serif;
   font-weight: 200;
   letter-spacing: 1px;
 }
-
-p {
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 20px;
+#title {
+  letter-spacing: 10px;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 section {
